<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Wine</string>
    <string name="profile_page">Your Profile</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_remove_all_purchases">Clear Purchase List</string>
    <string name="action_settings">Settings</string>

    <!-- General App Strings -->
    <string name="username">EXAMPLE_USERNAME</string>
    <string name="example_wine">EXAMPLE_WINE</string>

    <!-- Home Page Strings -->
    <string name="home">Home</string>
    <string name="review_a_wine">Review a Wine</string>
    <string name="your_profile">Your Profile</string>
    <string name="badges">View Earned Badges</string>
    <string name="view_menu">View Menu</string>
    <string name="order_food">Complete Purchase</string>

    <!-- Badges -->
    <string name="gold_heart">Purchase a wine 10 times.</string>
    <string name="purple_heart">Purchase a wine 5 times.</string>
    <string name="green_heart">Purchase a wine 3 times</string>

    <!-- Your Profile -->
    <string name="your_reviews">Your Reviews</string>
    <string name="purchase_history">Purchase History</string>

    <!-- New Review -->
    <string name="wine_name">Wine Name: </string>
    <string name="rating">Overall Rating: </string>
    <string name="noseRating">Nose Rating: </string>
    <string name="colorRating">Color Rating: </string>
    <string name="tasteRating">Taste Rating: </string>
    <string name="finishRating">Finish Rating: </string>
    <string name="restaurant_name">Restaurant Name: </string>
    <string name="description">Description: </string>
    <string name="submit_review">Submit Review</string>
    <string name="parse_app_id">VdUdTZEhM9vVNRX9Y2fUzZTZXNGkT0cMxkonazJJ</string>
    <string name="parse_client_key">6VgZMJUF6uD6WRJpEfB3cNINZUj21rgoqL1g88Zo</string>
    <string name="facebook_app_id">1547340548843891</string>
    <string name="facebook_app_secret">4ed95eba8f272219152525c578731d19</string>
    <string name="twitter_consumer_key">EHSoFY38bnZpmpKlvCr4sLBno</string>
    <string name="twitter_consumer_secret">JjFtxgETOawt60QGEEkjPSretNSzUJqreLSrG4DbUAy4425I8s</string>
    <string name="google_android_maps_key">AIzaSyBwLiODxZ-a8B-Iw5yjaVRS2cBNPqBw9M0</string>
    <string name="restaurant_out_of_range">Can\'t view restaurant! Get closer.</string>
    <string name="device_offline_message">"Your device appears to be offline. Some content may be unavailable."</string>
    <string name="logout">Log Out</string>
    <string name="title_activity_menu_list">Wine Menu</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_wine_detail">View Wine Details</string>
    <string name="title_activity_checklist">Select Items</string>
    <string name="title_activity_review_wine_profile">Wine Profile</string>
    <string name="title_activity_badge">Available Badges</string>
    <string name="title_activity_complete_purchase">Complete Your Purchase</string>
    <string name="title_activity_discount_overview">Discounts Applied</string>

    <!-- Wine Detail -->
    <string name="review_wine_btn">Review Wine</string>
    <string name="view_wine_reviews">View Wine Reviews</string>
    <string name="order_wine_btn">Add to Order: </string>
    <string name="glass">Glass: </string>
    <string name="bottle">Bottle: </string>
    <string name="title_activity_wine_review_list">Reviews</string>
    <string name="title_activity_review_detail">Review Details</string>

    <!-- Wine Detail Dialog -->
    <string name="purchase_dialog_added">Added to Your Purchase</string>
    <string name="purchase_dialog_content">This wine has been added to your current list of
    purchases. To undo this action, hit cancel. You can view eligible discounts when completing
    your purchase.</string>
    <string name="purchase_dialog_cancel">Cancel</string>
    <string name="purchase_dialog_OK">Okay</string>
    <string name="purchase_dialog_checkout">Complete Purchase</string>

    <!-- Complete Purchase Page -->
    <string name="complete_purchase">Checkout Total: %s</string>

    <!-- Complete Purchase Dialog -->
    <string name="complete_purchase_success">Complete Purchase?</string>
    <string name="complete_purchase_success_body">Would you like to complete your purchase?</string>
    <string name="complete_purchase_failure">Purchase is empty!</string>
    <string name="complete_purchase_failure_body">There are currently no wines that you are purchasing right now.</string>

    <!-- Discount Overview -->
    <string name="discount_overview_rate">Discount Rate: %s%%</string>
    <string name="discount_overview_badge_name">Badge Name: %s</string>
    <string name="discount_overview_wine_name">Wine Name: %s</string>
    <string name="discount_overview_note">NOTE: The discount rate only applies to one item out of a quantity.</string>
    <string name="discount_error">Current purchase does not have a discount applied.</string>
    <string name="title_activity_purchase_history">Purchase History</string>

    <!-- Purchase History -->
    <string name="purchase_history_total">Total: %s</string>
    <string name="title_activity_purchase_history_overview">Purchase Order Information</string>
    <string name="title_activity_view_badges">ViewBadgesActivity</string>
    <string name="title_activity_user_badge_attr">UserBadgeAttrActivity</string>

    <!-- Purchase History Error -->
    <string name="purchase_history_invalid">Invalid Access!</string>
    <string name="purchase_history_invalid_body">You cannot view another users purchase history!</string>

</resources>
