<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/user_profile_layout"
    android:layout_height="match_parent">


    <com.parse.ParseImageView
        android:id="@+id/iv_user_profile_pic"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:paddingBottom="1dp"
        android:layout_marginTop="5dp"
        android:paddingTop="1dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/username"
        android:id="@+id/tv_wine_review"
        android:layout_toEndOf="@+id/iv_user_profile_pic"
        android:layout_alignParentTop="true" />

    <Button
        android:layout_width="130dp"
        android:layout_height="80dp"
        android:text="@string/badges"
        android:id="@+id/b_badges"
        android:layout_weight="1"
        android:layout_toEndOf="@+id/iv_user_profile_pic"
        android:layout_below="@+id/tv_wine_review" />

    <Button
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:text="@string/purchase_history"
        android:id="@+id/b_purchase_history"
        android:layout_weight="1"
        android:layout_toEndOf="@+id/b_badges"
        android:layout_alignTop="@+id/b_badges"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/your_reviews"
        android:id="@+id/textView2"
        android:layout_below="@+id/iv_user_profile_pic"
        android:layout_alignParentStart="true" />

</RelativeLayout>