<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/wine_name"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/et_wine_name"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/textView"
        android:hint="name" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rb_wine_rating"
        android:layout_toEndOf="@+id/textView2"
        android:layout_below="@+id/et_wine_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/rating"
        android:id="@+id/textView2"
        android:layout_alignTop="@+id/rb_wine_rating"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/restaurant_name"
        android:id="@+id/textView3"
        android:layout_toStartOf="@+id/et_wine_name"
        android:layout_below="@+id/rb_wine_rating"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/rb_wine_rating" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/et_restaurant_name"
        android:layout_below="@+id/rb_wine_rating"
        android:layout_alignParentEnd="true"
        android:hint="name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/description"
        android:id="@+id/textView4"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/et_description"
        android:layout_below="@+id/textView4"
        android:layout_toStartOf="@+id/et_wine_name"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/et_restaurant_name"
        android:hint="Description" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_review"
        android:id="@+id/b_submit_review"
        android:layout_below="@+id/et_description"
        android:layout_alignEnd="@+id/textView4" />
</RelativeLayout>